added favrioute marker and videoboard actvity